Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97380

tst_lupdate fails with Windows 10 21H1 and Windows 11 21H2

XMLWordPrintable

    • Windows
    • 286ea6d8fccedd7306f1bb602af673a50e7e3d68 (qt/qttools/dev) 598a23e2d1be9966f4c888e6166d132e02241500 (qt/qttools/6.2)

      http://coin/coin/integration/qt/qt5/tasks/web_qt_qt5_1633622249506

      http://coin/coin/api/results/qt/qttools/73de651c308d772fd9963b57f947363a9ffd0a75/WindowsWindows_10x86_64WindowsWindows_10x86_64MSVC2019qtci-windows-10-x86_64-52-9bc135DebugAndRelease_Sccache/7273716e32318e8743f09309701480f1a7331774/test_1633622396/log.txt.gz

       

      agent:2021/10/07 16:07:04 build.go:393: 3: FAIL! : tst_lupdate::good(clang-recurse_part_ts) Output for C:/Users/qt/work/qt/qttools/tests/auto/linguist/lupdate/testdata/good/recurse_part_ts/expectedoutput.txt does not meet expectations:
      agent:2021/10/07 16:07:04 build.go:393: 3: <<<<<<< got
      agent:2021/10/07 16:07:04 build.go:393: 3: In file included from C:\Users\qt\work\qt\qttools\tests\auto\linguist\lupdate\testdata\subdirs_part\subdir1\main.cpp:28:
      agent:2021/10/07 16:07:04 build.go:393: 3: In file included from C:/Users/qt/work/install/include/QtCore\QtCore:4:
      agent:2021/10/07 16:07:04 build.go:393: 3: In file included from C:/Users/qt/work/install/include/QtCore/qglobal.h:146:
      agent:2021/10/07 16:07:04 build.go:393: 3: In file included from C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\VC\Tools\MSVC\14.28.29333\include\algorithm:11:
      agent:2021/10/07 16:07:04 build.go:393: 3: In file included from C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\VC\Tools\MSVC\14.28.29333\include\xmemory:13:
      agent:2021/10/07 16:07:04 build.go:393: 3: In file included from C:\Program Files (x86)\Microsoft Visual Studio\2019\Professional\VC\Tools\MSVC\14.28.29333\include\limits:14:
      agent:2021/10/07 16:07:04 build.go:393: 3: ...
      
      agent:2021/10/07 16:07:04 build.go:393: 3: =========
      agent:2021/10/07 16:07:04 build.go:393: 3: >>>>>>> expected
      agent:2021/10/07 16:07:04 build.go:393: 3: lupdate warning: TS files from command line

      prevent recursing into C:/Users/qt/work/qt/qttools/tests/auto/linguist/lupdate/testdata/subdirs_part/subdir2/subsub2/subsub2.pro.
      agent:2021/10/07 16:07:04 build.go:393: 3:

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            hehalmet Heikki Halmet
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes