lupdate: Work around offsetof problem when using clang parser

Not setting this define will result in errors like "error: constexpr
variable '.' must be initialized by a constant expression" when clang
is used with Windows SDK includes.

Fixes: QTBUG-97380
Pick-to: 6.2
Change-Id: If3e76065aa7f41ebe2c5fe122c378ef45ecce5bc
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>